# ds-toolkit

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_1.0.4.md  __init__.py  base.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/core/: index.html
api/eval/: index.html
api/features/: index.html
api/infra/: index.html
api/models/: index.html
api/reporting/: index.html
changelog/: index.html
contributing/: index.html
core/: __init__.py  deduplicator.py  distribution.py  missing.py  outliers.py  profiler.py  typecaster.py  validator.py
docs/: changelog.md  contributing.md  index.md
docs/api/: core.md  eval.md  features.md  infra.md  models.md  reporting.md
docs/getting-started/: design.md  installation.md  quickstart.md
docs/guide/: stage1.md  stage2.md  stage3.md  stage4.md  stage5.md  stage6.md  stage7.md
ds_toolkit/: __init__.py  base.py
ds_toolkit/core/: __init__.py  deduplicator.py  distribution.py  missing.py  outliers.py  profiler.py  typecaster.py  validator.py
ds_toolkit/eval/: __init__.py  diagnostic_plotter.py  error_analyser.py  metrics.py  shap_explainer.py
ds_toolkit/features/: __init__.py  datetime_decomposer.py  encoder.py  interaction_builder.py  scaler.py  selector.py
ds_toolkit/infra/: __init__.py  config.py  logger.py  serialiser.py
ds_toolkit/models/: __init__.py  cv_harness.py  ensemble.py  registry.py  tuner.py
ds_toolkit/reporting/: __init__.py
eval/: __init__.py  diagnostic_plotter.py  error_analyser.py  metrics.py  shap_explainer.py
features/: __init__.py  datetime_decomposer.py  encoder.py  interaction_builder.py  scaler.py  selector.py
getting-started/design/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/stage1/: index.html
guide/stage2/: index.html
guide/stage3/: index.html
guide/stage4/: index.html
guide/stage5/: index.html
guide/stage6/: index.html
guide/stage7/: index.html
infra/: __init__.py  config.py  logger.py  serialiser.py
reporting/: __init__.py
search/: search_index.json
tests/: conftest.py
tests/test_core/: test_stage1.py  test_stage2.py
tests/test_eval/: __init__.py  test_stages567.py
tests/test_features/: test_stage3.py
tests/test_models/: test_stage4.py
