[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ds-toolkit"
version = "1.0.0"
description = "Post-collection data science lifecycle toolkit — from raw DataFrame to model card"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Adnan Mohamud", email = "adnan@patadoc.com" }
]
keywords = [
  "data science", "machine learning", "sklearn", "feature engineering",
  "model evaluation", "SHAP", "experiment tracking", "MLflow"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "pydantic>=2.0",
  "jinja2>=3.1",
  "ipython>=8.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
boosting = ["xgboost>=2.0", "lightgbm>=4.0", "catboost>=1.2"]
fuzzy    = ["rapidfuzz>=3.0"]
explain  = ["shap>=0.43"]
tune     = ["optuna>=3.3"]
track    = ["mlflow>=2.7", "pyyaml>=6.0"]
all      = ["ds-toolkit[boosting,fuzzy,explain,tune,track]"]
dev      = ["pytest>=7.4", "pytest-cov>=4.1", "black>=23.0", "ruff>=0.1", "mypy>=1.5", "pyyaml>=6.0"]
docs     = ["mkdocs>=1.5", "mkdocs-material>=9.0", "mkdocstrings[python]>=0.24"]

[project.urls]
Homepage      = "https://github.com/ShadowGodd1/ds-toolkit"
Documentation = "https://ShadowGodd1.github.io/ds-toolkit"
Repository    = "https://github.com/ShadowGodd1/ds-toolkit"
"Bug Tracker" = "https://github.com/ShadowGodd1/ds-toolkit/issues"
Changelog     = "https://github.com/ShadowGodd1/ds-toolkit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["ds_toolkit*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311", "py312"]
